# maturin_uv_cffi_template

./: .gitignore  Cargo.toml  LICENSE  README.md  Taskfile.yml  pyproject.toml
python/gamess_data_manager/: __init__.py
rust/gamess_data_manager/: Cargo.toml
rust/gamess_input_parser/: Cargo.toml
rust/py_modules/: Cargo.toml
rust/py_modules/src/: lib.rs
samples/: main.py
