[package]
name              = "gamess_data_manager"
version.workspace = true
edition.workspace = true

[[bin]]
name     = "gamess_data_manager_sample"
path     = "../../samples/main.rs"
required-features = ["tokio"]

[features]
default = []
tokio   = ["dep:tokio"]

[lib]
name       = "gamess_data_manager"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3  = { version = "0.23.5", features = ["extension-module"] }
tokio = { version = "1.43", optional = true, features = ["default", "rt-multi-thread", "macros"] }
